==> grblHAL/iMXRT1062/grblHAL_Teensy4/src/ioports_analog.c <==
#include "driver.h"
#include "mcp3221.h"
#include "core_pins.h"
#include "grbl/ioports.h"
#define M(a, b) ((((a) - 1) << 4) | (b))

static bool init_pwm (xbar_t *output, pwm_config_t *config, bool persistent)
{
    const struct pwm_pin_info_struct *hw = pwm_pin_infos + output->pin;

    uint32_t prescaler, module, submodule;
    ioports_pwm_t *pwm_data = (ioports_pwm_t *)output->port;
    
    if((prescaler = set_pwm_values(config, pwm_data))) {

        module = (hw->module >> 4) & 0b11;
        submodule = hw->module & 0b11;

        if(hw->type == 1) {

            IMXRT_FLEXPWM_t *flexpwm;

            switch(module) {

                case 0:
                    flexpwm = &IMXRT_FLEXPWM1;
                    CCM_CCGR4 |= CCM_CCGR4_PWM1(CCM_CCGR_ON);
                    break;

                case 1:
                    flexpwm = &IMXRT_FLEXPWM2;
                    CCM_CCGR4 |= CCM_CCGR4_PWM2(CCM_CCGR_ON);
                    break;

                case 2:
                    flexpwm = &IMXRT_FLEXPWM3;
                    CCM_CCGR4 |= CCM_CCGR4_PWM3(CCM_CCGR_ON);
                    break;

                default:
                    flexpwm = &IMXRT_FLEXPWM4;
                    CCM_CCGR4 |= CCM_CCGR4_PWM4(CCM_CCGR_ON);
            }

            flexpwm->FCTRL0 = FLEXPWM_FCTRL0_FLVL(15); // logic high = fault
            flexpwm->FSTS0 = 0x000F; // clear fault status
            flexpwm->FFILT0 = 0;
            flexpwm->MCTRL |= FLEXPWM_MCTRL_CLDOK(15);
            flexpwm->SM[submodule].CTRL2 = FLEXPWM_SMCTRL2_INDEP | FLEXPWM_SMCTRL2_WAITEN | FLEXPWM_SMCTRL2_DBGEN;
            flexpwm->SM[submodule].CTRL = FLEXPWM_SMCTRL_FULL | FLEXPWM_SMCTRL_PRSC(prescaler);
            flexpwm->SM[submodule].OCTRL = 0;
            flexpwm->SM[submodule].DTCNT0 = 0;
            flexpwm->SM[submodule].INIT = 0;
            flexpwm->SM[submodule].VAL0 = 0;
            flexpwm->SM[submodule].VAL1 = pwm_data->period;
            flexpwm->SM[submodule].VAL2 = 0;
            flexpwm->SM[submodule].VAL3 = 0;
            flexpwm->SM[submodule].VAL4 = 0;
            flexpwm->SM[submodule].VAL5 = 0;
            flexpwm->MCTRL |= FLEXPWM_MCTRL_LDOK(1 << submodule);
            flexpwm->MCTRL |= FLEXPWM_MCTRL_RUN(15);

            *(portConfigRegister(output->pin)) = hw->muxval;

        } else if(hw->type == 2) {

            IMXRT_TMR_t *qtimer;

            switch(module) {

                case 0:
                    qtimer = &IMXRT_TMR1;
                    CCM_CCGR6 |= CCM_CCGR6_QTIMER1(CCM_CCGR_ON);
                    break;

                case 1:
                    qtimer = &IMXRT_TMR2;
                    CCM_CCGR6 |= CCM_CCGR6_QTIMER2(CCM_CCGR_ON);
                    break;

                case 2:
                    qtimer = &IMXRT_TMR3;
                    CCM_CCGR6 |= CCM_CCGR6_QTIMER3(CCM_CCGR_ON);
                    break;

                default:
                    CCM_CCGR6 |= CCM_CCGR6_QTIMER4(CCM_CCGR_ON);
                    qtimer = &IMXRT_TMR4;
            }

            qtimer->CH[submodule].CTRL = 0;
            qtimer->CH[submodule].SCTRL = config->invert ? (TMR_SCTRL_OEN|TMR_SCTRL_FORCE|TMR_SCTRL_VAL|TMR_SCTRL_OPS) : (TMR_SCTRL_OEN|TMR_SCTRL_FORCE|TMR_SCTRL_VAL);
            qtimer->CH[submodule].LOAD = 0;
            qtimer->CH[submodule].COMP1 = pwm_data->period;
            qtimer->CH[submodule].CMPLD1 = pwm_data->period;
            qtimer->CH[submodule].CTRL = TMR_CTRL_CM(0b001) | TMR_CTRL_PCS(prescaler) | TMR_CTRL_LENGTH | TMR_CTRL_OUTMODE(0b100);
            qtimer->ENBL |= 1 << submodule;

            *(portConfigRegister(output->pin)) = hw->muxval;
        }
        set_pwm_cap(output, config->servo_mode);
    }
    
    return prescaler != 0; 
}

static bool analog_out (uint8_t port, float value)
{
    if(port < analog.out.n_ports) {

        port = ioports_map(analog.out, port);
        uint_fast16_t pwm = ioports_compute_pwm_value(&pwm_data[aux_out_analog[port].pwm_idx], value);
        uint32_t module, submodule;
        const struct pwm_pin_info_struct *hw = pwm_pin_infos + aux_out_analog[port].pin;

        module = (hw->module >> 4) & 0b11;
        submodule = hw->module & 0b11;

        if(pwm_values)
            pwm_values[aux_out_analog[port].id - Output_Analog_Aux0] = value;

        if(hw->type == 1) {

            IMXRT_FLEXPWM_t *flexpwm;

            switch(module) {

                case 0:
                    flexpwm = &IMXRT_FLEXPWM1;
                    break;

                case 1:
                    flexpwm = &IMXRT_FLEXPWM2;
                    break;

                case 2:
                    flexpwm = &IMXRT_FLEXPWM3;
                    break;

                default:
                    flexpwm = &IMXRT_FLEXPWM4;
            }

            flexpwm->MCTRL |= FLEXPWM_MCTRL_CLDOK(1 << submodule);

            switch(hw->channel) {

                case 0: // X
                   flexpwm->SM[submodule].VAL0 = flexpwm->SM[submodule].VAL1 - pwm;
                   flexpwm->OUTEN |= FLEXPWM_OUTEN_PWMX_EN(1 << submodule);
                   break;

                case 1: // A
                   flexpwm->SM[submodule].VAL3 = pwm;
                   flexpwm->OUTEN |= FLEXPWM_OUTEN_PWMA_EN(1 << submodule);
                   break;

                case 2: // B
                   flexpwm->SM[submodule].VAL5 = pwm;
                   flexpwm->OUTEN |= FLEXPWM_OUTEN_PWMB_EN(1 << submodule);
            }

            flexpwm->MCTRL |= FLEXPWM_MCTRL_LDOK(1 << submodule);

        } else if(hw->type == 2) {

            IMXRT_TMR_t *qtimer;

            switch(module) {

                case 0:
                    qtimer = &IMXRT_TMR1;
                    break;

                case 1:
                    qtimer = &IMXRT_TMR2;
                    break;

                case 2:
                    qtimer = &IMXRT_TMR3;
                    break;

                default:
                    qtimer = &IMXRT_TMR4;
            }

            qtimer->CH[submodule].COMP2 = pwm;
            qtimer->CH[submodule].CMPLD1 = pwm_data[aux_out_analog[port].pwm_idx].period - pwm;
            qtimer->CH[submodule].CTRL |= TMR_CTRL_CM(0b001);
        }
    }

    return port < analog.out.n_ports;
}

void ioports_init_analog (pin_group_pins_t *aux_inputs, pin_group_pins_t *aux_outputs)
{
    aux_in_analog = aux_inputs->pins.inputs;
    aux_out_analog = aux_outputs->pins.outputs;

    set_pin_description_digital = hal.port.set_pin_description;
    hal.port.set_pin_description = set_pin_description;

#if MCP3221_ENABLE

    pin_group_pins_t aux_in = {
        .n_pins = 1
    };

    mcp3221.function = Input_Analog_Aux0 + (aux_inputs ? aux_inputs->n_pins : 0);
    mcp3221.group = PinGroup_AuxInputAnalog;
    mcp3221.id = aux_inputs ? aux_inputs->n_pins : 0;
    mcp3221.port = "MCP3221:";

    if((mcp3221.mode.analog = MCP3221_init())) {
        if(aux_inputs)
            aux_inputs->n_pins++;
        else
            aux_inputs = &aux_in;
        mcp3221.get_value = mcp3221_in_state;
    } else
        mcp3221.description = "No power";

    on_enumerate_pins = hal.enumerate_pins;
    hal.enumerate_pins = enumerate_pins;

#endif

    if(ioports_add(&analog, Port_Analog, aux_inputs->n_pins, aux_outputs->n_pins))  {

        uint_fast8_t i, n_pwm = 0;

        if(analog.in.n_ports) {

            wait_on_input_digital = hal.port.wait_on_input;
            hal.port.wait_on_input = wait_on_input;

            for(i = 0; i < analog.in.n_ports; i++)
                aux_in_analog[i].description = iports_get_pnum(analog, i);
        }

        if(analog.out.n_ports) {

            pwm_config_t config = {
                .freq_hz = 5000.0f,
                .min = 0.0f,
                .max = 100.0f,
                .off_value = 0.0f,
                .min_value = 0.0f,
                .max_value = 100.0f,
                .invert = Off
            };

            hal.port.analog_out = analog_out;

            for(i = 0; i < analog.out.n_ports; i++) {
                if(aux_out_analog[i].mode.pwm)
                    n_pwm++;
            }

            pwm_data = calloc(n_pwm, sizeof(ioports_pwm_t));
            pwm_values = calloc(n_pwm, sizeof(float));

            n_pwm = 0;
            for(i = 0; i < analog.out.n_ports; i++) {
                aux_out_analog[i].description = iports_get_pnum(analog, i);
                if(aux_out_analog[i].mode.pwm && !!pwm_data) {
                    aux_out_analog[i].pwm_idx = n_pwm++;
                    init_pwm(get_pin_info(Port_Analog, Port_Output, i), &config, false);
                }
                analog_out(i, 0);
            }
        }

        claim_digital = hal.port.claim;
        swap_pins_digital = hal.port.swap_pins;
        get_pin_info_digital = hal.port.get_pin_info;
        set_pin_description_digital = hal.port.set_pin_description;

        if(analog.in.n_ports) {
            if((wait_on_input_digital = hal.port.wait_on_input) == NULL)
                wait_on_input_digital = wait_on_input_dummy;
            hal.port.wait_on_input = wait_on_input;
        }

        hal.port.claim = claim;
//        hal.port.swap_pins = swap_pins;
        hal.port.get_pin_info = get_pin_info;
        hal.port.set_pin_description = set_pin_description;

    } else
         hal.port.set_pin_description = set_pin_description_digital;
}
